<resources>
    <string name="app_name">Inventory Control</string>
    <string name="_0">0</string>
    <string name="cover">Cover</string>
    <string name="tittle" />
    <string name="picture">Foto</string>
    <string name="x">X</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="categoria">Categoria</string>
    <string name="descri_o_do_produto">Descrição do Produto</string>
    <string name="localidade">Localidade</string>
    <string name="quantidade">Quantidade</string>
    <string name="quantidade_total">Quantidade Total</string>
    <string name="valor">0</string>
</resources>