<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductEditionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/picture"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/image_view_picture"
        app:layout_constraintTop_toTopOf="@+id/image_view_picture" />

    <ImageView
        android:id="@+id/image_view_picture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/green_furiosa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="@string/x"
        android:textColor="@color/black_furiosa"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_view_picture"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_text_product"
        android:layout_width="348dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/edit_text_imput"
        android:hint="@string/nome_do_produto"
        android:inputType="text"
        android:gravity="center"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image_view_picture"
        app:layout_constraintTop_toBottomOf="@+id/image_view_picture" />

    <EditText
        android:id="@+id/edit_text_category"
        android:layout_width="348dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_imput"
        android:gravity="center"
        android:hint="@string/categoria"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_product"
        app:layout_constraintStart_toStartOf="@+id/edit_text_product"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_product" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="348dp"
        android:layout_height="129dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_imput"
        android:gravity="start|top"
        android:hint="@string/descri_o_do_produto"
        android:inputType="textMultiLine"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_category"
        app:layout_constraintStart_toStartOf="@+id/edit_text_category"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_category" />

    <TableRow
        android:id="@+id/table_row_locality"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_imput"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_description"
        app:layout_constraintStart_toStartOf="@+id/edit_text_description"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_description">

        <EditText
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/localidade" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:hint="@string/quantidade" />
    </TableRow>

    <TableRow
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_imput"
        app:layout_constraintEnd_toEndOf="@+id/table_row_locality"
        app:layout_constraintStart_toStartOf="@+id/table_row_locality"
        app:layout_constraintTop_toBottomOf="@+id/table_row_locality"
        android:layout_marginTop="12dp"
        >

        <EditText
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/quantidade_total" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:hint="@string/valor" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>